[project]
name = "lightgbm-app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yosuke Horie", email = "Yosuke.Horie@sony.com" }
]
dependencies = [
    "lightgbm>=4.5.0",
    "shap>=0.46.0",
    "numpy<2.0.0",
    "matplotlib>=3.9.1",
    "streamlit>=1.37.0",
    "streamlit-shap>=1.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lightgbm_app"]
